test/bad-assignment.stderr
Error: Line 1, col 1:
> 1 | 2 := 1
      ^
  2 | 

Bad lvalue